Flask/app/static/css/main.css
body {
    background-color: #96b4c9;
    margin:0;height:100%;

}




canvas{
    position:fixed;top:0px;left:0;width:100%;
    z-index:-1;
    background-image: linear-gradient(bottom, rgb(105,173,212) 0%, rgb(23,82,145) 84%);
    background-image: -o-linear-gradient(bottom, rgb(105,173,212) 0%, rgb(23,82,145) 84%);
    background-image: -moz-linear-gradient(bottom, rgb(105,173,212) 0%, rgb(23,82,145) 84%);
    background-image: -webkit-linear-gradient(bottom, rgb(105,173,212) 0%, rgb(23,82,145) 84%);
    background-image: -ms-linear-gradient(bottom, rgb(105,173,212) 0%, rgb(23,82,145) 84%);

    background-image: -webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0, rgb(105,173,212)),
        color-stop(0.84, rgb(23,82,145))
    );
}
.container {
  max-width: 1000px;
}

.navbar-default {
    background-color: #0093E9;
    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
    border: unset;
    margin-bottom: 0;
    text-align: center;
}

.content-window {
    background-color: unset;
    /* Paddings outside jumbotrons */
    padding: 35px 4% 35px 4%;
}

.jumbotron {
    background-color: aliceblue;
    margin-bottom: 35px;
}

.container .jumbotron {
    /* Paddings inside jumbotrons */
    padding: 15px 15px 15px 15px;
}

#post-img {
    max-width: 100%;
    max-height: 350px;
    display: block;
    margin-right: auto;
    margin-left: auto;
}

.jumbotron .post {
    font-size: 16px;
}

.infinityContainer {
    display: flex;
    flex-wrap: wrap;
}


#selfie {
    height: 50px;
    width: 50px;
}

.center{
  top: 50%;
  left: 50%;
}

.btn-default{
    color: aliceblue;
     background-color: #96b4c9;
    border-color: black;
}

#myBtn {
    height: 50px;
    width: 50px;
    border: 4px solid transparent;
}

#adDisplay img {
    max-width: 100%;
    max-height: 350px;
    display: block;
    margin-right: auto;
    margin-left: auto;
}

#loading-msg {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 60px;
    text-align: center;
}



#factDisplay {
  position: relative;
  width: 100%;
  max-width: 400px;

}

#factDisplay #post-img {
  max-width: 100%;
    max-height: 320px;
    display: block;
    margin-right: auto;
    margin-left: auto;
}

#factDisplay #button1 {
  position: absolute;
  top: 20%;
  left: 60%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  background-color: white;
  color: black;
  font-family: Montserrat, sans-serif;
  font-size: 14px;
  padding: 12px 24px;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  text-align: center;
}

#factDisplay #button1:hover {
  background-color: white;
}

#nav {
    background: -webkit-linear-gradient(#000000, #005ccb, #000000);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: "Montserrat", sans-serif;
}

#nav-Create_post {
    font-size: 20px;
    font-family: Montserrat, sans-serif;
    background: -webkit-linear-gradient(#000000, #005ccb, #000000);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

#nav-Feed {
    font-size: 20px;
    font-family: Montserrat, sans-serif;
    background: -webkit-linear-gradient(#000000, #005ccb, #000000);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

#nav-Log-out {
    font-size: 20px;
    font-family: Montserrat, sans-serif;
    background: -webkit-linear-gradient(#000000, #005ccb, #000000);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

#nav-Profile {
    font-size: 20px;
    font-family: Montserrat, sans-serif;
    background: -webkit-linear-gradient(#000000, #005ccb, #000000);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

